--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,6 @@ dependencies {
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
-
+    //Coil
+    implementation("io.coil-kt:coil:0.13.0")
 }
