--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,5 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
     //Coil
-    implementation("io.coil-kt:coil:0.13.0")
+    //implementation("io.coil-kt:coil:0.13.0")
 }
