--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RaylieRecipes"
         android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".Register"
+        <activity android:name=".RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
-        <activity android:name=".RecyclerView" />
         <activity
-            android:name=".Login"
+            android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
