--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,18 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RaylieRecipes"
-        android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".RegisterActivity"
+        android:theme="@style/Theme.RaylieRecipes">
+        <activity android:name=".ForgotPasswordActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".RegisterActivity"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
