--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,9 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding{
-        enabled=true
+    buildFeatures {
+
+        dataBinding = true
     }
 }
 
@@ -65,5 +66,9 @@ dependencies {
     // Declare the dependency for the Cloud Firestore library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    // For loading and tinting drawables on older versions of the platform
+    implementation("androidx.appcompat:appcompat:1.3.0")
+    implementation("androidx.appcompat:appcompat-resources:1.3.0")
 
 }
