--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     // For loading and tinting drawables on older versions of the platform
     implementation("androidx.appcompat:appcompat:1.3.0")
     implementation("androidx.appcompat:appcompat-resources:1.3.0")
+    implementation 'com.nambimobile.widgets:expandable-fab:1.0.2'
 
 }
