--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".CreateRecipeActivity" />
+        <activity android:name=".CreateRecipeActivity"
+            android:theme="@style/AppTheme.NoActionBar2"/>
 
         <activity
             android:name=".ForgotPasswordActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".NewActivity">
+        <activity android:name=".NewActivity"
+            android:theme="@style/AppTheme.NoActionBar2">
 
         </activity>
 
@@ -36,7 +38,8 @@
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar2"/>
     </application>
 
 </manifest>
